# nplrisk-ontology

./: .env.example  README.md  pyproject.toml
gql-queries/: cq01.gql  cq02.gql  cq03.gql  cq04.gql  cq05.gql  cq06.gql  cq07.gql  cq08.gql  cq09.gql  cq10.gql  cq11.gql
input/data/csv/: borrower.csv  collateral.csv  collection_agent.csv  counterparty_group.csv  enforcement_event.csv  external_collection_event.csv  forbearance_event.csv  insolvency_practitioner.csv  insurance_provider.csv  loan.csv  loan_borrower_link.csv  property_collateral.csv  rating_agency.csv  receiver.csv
input/data/schema/: ddl.sql
notebooks/: compare_agents_fabric.ipynb
scenarios/: npl_scenarios.json
scripts/: 01_parse_owl.py  02_build_mapping.py  03_setup.py  04_refresh_and_validate.py  05_setup_agents.py  06_score.py  _build_notebook.py
src/nplrisk_bench/: __init__.py
src/nplrisk_bench/agents/: instructions.py  provision.py
src/nplrisk_bench/fabric_client/: auth.py  config.py  data_agent_api.py  definition_builder.py  graph_api.py  lakehouse_sync.py  livy_api.py  ontology_api.py
src/nplrisk_bench/mapping/: __init__.py  owl_to_fabric.py
src/nplrisk_bench/owl_parser/: __init__.py  model.py  parser.py
src/nplrisk_bench/scoring/: __init__.py  evaluator.py  scenarios.py
tests/: conftest.py  test_agent_wiring.py  test_evaluator.py  test_fabric_client.py  test_mapping.py  test_owl_parser.py  test_scorer_lock.py
